# sunpy_movies

./: .gitignore  README.md  pyproject.toml
examples/: aia.ipynb  nustar.ipynb
sunpy_movies/: maker.py
